--- a/CSS/CSS_Rollover.css
+++ b/CSS/CSS_Rollover.css
@@ -11,16 +11,18 @@ body{
 .menu-container{
    top: 0;
    left: 0;
+    /* to the top edge of the screen */
    position: absolute;
     width:100%;
     background-color:#184352;
+    
 }
 .menu{
     font: bold 12px/10px sans-serif; 
     text-align: center;
     display: inline;
     margin: 0;
-    padding: 0;
+    padding:0;
     list-style: none;
 }
 .menu li{
@@ -41,14 +43,15 @@ body{
 .menu li:hover ul{
     display: block;
     opacity: 1;
+    /*while hovered, drop down-menu appears, this also avoids a block level bug */
     visibility: visible;
 }
 .submenu{
     padding: 0;
-    left: 0;
+    left:0;
     position: absolute;
-     top: 43.5px;
-    width:125.5px;
+     top: 100;
+    width:43.5px;
     opacity: 0;
     visibility:hidden;
     
